# PortfolioPulse

./: .env.example  .gitignore  ANIMATION_IMPLEMENTATION_GUIDE.md  ANIMATION_OPTIMIZATION_GUIDE.md  ARCHITECTURE_INVESTIGATION_REPORT.md  BINARY_DEPLOYMENT_GUIDE.md  BINARY_VS_DOCKER_COMPARISON.md  BLOG_LAYOUT_OPTIMIZATION.md  BRANCH_STATIC_README.md  BUILD_SUCCESS.md  CLEANUP_COMPLETED.md  CLEANUP_PHASE3_REPORT.md  CLEANUP_PLAN.md  COMPONENTS_DEMO_README.md  CONFIG_CLEANUP_REPORT.md  CORE_EFFECTS_README.md  COST_OPTIMIZATION_GUIDE.md  COUPLING_ANALYSIS_REPORT.md  CROSS_PLATFORM_BUILD_GUIDE.md  DEPLOY.md  DEPLOYMENT_CLEANUP_LOG.md  DEPLOYMENT_STRATEGY_DEEP_DIVE.md  DEPLOYMENT_TECH_EXPLAINED.md  DEPLOYMENT_TROUBLESHOOTING.md  DESIGN_COMPONENTS_LIBRARY.md  DESIGN_IMPLEMENTATION_GUIDE.md  DESIGN_STYLES_ANALYSIS.md  DESIGN_STYLE_SYSTEM.md  DOCKER_MOUNT_BUILD_GUIDE.md  DOCUMENTATION_GUIDE.md  Dockerfile.backend  Dockerfile.frontend  EDITION2024_SOLUTION.md  EFFECTS_DEMO_README.md  ERROR_FIX_REPORT.md  FRONTEND_REFACTOR_REPORT.md  FRONTEND_TRUTH_CORRECTED.md  GITHUB_ACTIONS_CLOUD_BUILD_FIX.md  GIT_BRANCH_ANALYSIS.md  LAYOUT_TEST_GUIDE.md  (+72 more)
backend/: Cargo.toml  backend-only.code-workspace  init-db.ps1  run.ps1  run.sh
backend/.cargo/: config.toml
backend/.sqlx/: query-25649426305ab3de1408c1daccc5a639cedb8e8a3c5ec3cc947a77584c340653.json  query-6ab6bf6d42cf46462e2342c65d18f4638ec6ac672e7226961b8b714045281a5e.json  query-737075e07378b520a060236a54aef06bb2bc9c891f5a96883e54d5208e23ee53.json
backend/migrations/: 003_blog_tables.sql
backend/src/: auth.rs  config.rs  dto.rs  error.rs  handlers.rs  main.rs  models.rs  request.rs  (+1 more)
(+322 files in other folders)
