[package]
name = "portfolio-pulse-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web框架
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# Markdown 解析
pulldown-cmark = "0.10"
yaml-rust = "0.4"

# 错误处理
thiserror = "1.0"
anyhow = "1.0"

# 编码
base64 = "0.22"

# HTTP客户端
reqwest = { version = "0.11", features = ["json"] }

# 环境变量
dotenvy = "0.15"

# 日志
tracing = "0.1"
tracing-subscriber = "0.3"

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

[dev-dependencies]
tokio-test = "0.4"
